TPI modificadas paginas en web servers

--- a/kathara-lab_TPI/www/var/www/html/index.html
+++ b/kathara-lab_TPI/www/var/www/html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html>
-<head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="0;URL=http://datos.example.com/cgi-bin/datos.pl">
-</head>
-<body>
+<html>
+<frameset rows="100%,100%">
+  <frame src="http://datos.example.com/index.html" />
+  <frame src="http://datos.example.com/cgi-bin/datos.pl" />
+</frameset>
 </body>
 </html>
